--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mini-тестовое</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <script src="./scripts/script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
+    <main class="main">
+      <section class="form-block">
+        <h1 class="form-block__title">Тестовое</h1>
 
-</body>
+        <form class="form" id="test-form">
+          <label class="form__label" for="name">Имя:</label>
+
+          <div class="form__input-wrapper">
+            <input
+              class="form__input"
+              type="text"
+              id="name"
+              placeholder="Placeholder"
+            />
+          </div>
+
+          <button class="form__button" type="submit">Туц-туц</button>
+        </form>
+      </section>
+    </main>
+  </body>
 </html>
